--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "js_scaffold",
+  "author": "Nicole Guzman",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +12,6 @@
     "javascript",
     "husky"
   ],
-  "author": "logicus03",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
